# fastapi_docker-compose

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/documents/: documents_model.py  documents_schema.py
backend/src/postgres/: database.py
backend/src/routes/: documents_route.py  prompt_route.py  users_route.py
backend/src/users/: users_model.py  users_schema.py
frontend/: Dockerfile  index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
